--- a/src/app/private/pages/profile/profile.page.html
+++ b/src/app/private/pages/profile/profile.page.html
@@ -48,6 +48,13 @@
     </ion-card-header>
   </ion-card>
 
+  <div class="ion-text-center ion-margin-top">
+    <ion-button [routerLink]="['/historial-medico']" routerLinkActive="router-link-active" >
+      Ver historial medico
+    </ion-button>
+  </div>
+
+
   <ion-card>
     <ion-card-header>
       <ion-accordion-group>
