--- a/src/app/private/pages/historial-medico/historial-medico.page.html
+++ b/src/app/private/pages/historial-medico/historial-medico.page.html
@@ -5,9 +5,67 @@
 </ion-header>
 
 <ion-content [fullscreen]="true">
-  <ion-header collapse="condense">
-    <ion-toolbar>
-      <ion-title size="large">historialMedico</ion-title>
-    </ion-toolbar>
-  </ion-header>
+  <p class="title">Historial</p>
+
+  <ion-card>
+    <ion-card-header>
+       <div class="flex-warp">
+        <img class="rounded" alt="user" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
+        <h3>Jorge <span>Zambrano</span></h3>
+       </div>
+       <p>Paciente <span>25/10/2023</span></p>
+
+      <ion-accordion-group class="ion-no-padding">
+        <ion-accordion value="first" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <ion-label>Antecedente </ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <p class="content-data">Codición medica</p>
+            <p class="content-data">Alergias</p>
+            <p class="content-data">Tipo sangre</p>
+            <p class="content-data">Hora inico </p>
+            <p class="content-data">Tipo sangre</p>
+          </div>
+        </ion-accordion>
+
+        <ion-accordion value="second" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <ion-label>Medicamentos</ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <p class="content-data">Nombre</p>
+            <p class="content-data">Dosis</p>
+          </div>
+        </ion-accordion>
+
+        <ion-accordion value="tried" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <ion-label>Vacunas</ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <p class="content-data">Nombre</p>
+          </div>
+        </ion-accordion>
+
+        <ion-accordion value="four" toggleIcon="caret-down-circle" toggleIconSlot="start">
+          <ion-item slot="header" color="light">
+            <ion-label>Exámenes medicos</ion-label>
+          </ion-item>
+          <div class="ion-padding" slot="content">
+            <p class="content-data">Nombre</p>
+            <p class="content-data">Resutado</p>
+          </div>
+        </ion-accordion>
+
+      </ion-accordion-group>
+
+      <div class="ion-text-center ion-margin-top">
+        <ion-button [routerLink]="['/profile']" routerLinkActive="router-link-active" >
+          Volver
+        </ion-button>
+      </div>
+
+    </ion-card-header>
+  </ion-card>
 </ion-content>
