estructura lista para implementacion de servicios

--- a/src/app/private/pages/profile/profile.page.html
+++ b/src/app/private/pages/profile/profile.page.html
@@ -49,5 +49,9 @@
   <app-card-items [Number]="'10'" [Nombre]="'Vacunas'" />
   <app-card-items [Number]="'30'" [Nombre]="'Medicamentos'" />
   <app-card-items [Number]="'30'" [Nombre]="'Examenes'" />
-
+  <div class="ion-text-center ion-margin-top">
+    <ion-button (click)="logout()" color="danger">
+      Cerrar seción
+    </ion-button>
+  </div>
 </ion-content>
