--- a/src/app/private/pages/dudas/components/card-reply-duda/card-reply-duda.component.html
+++ b/src/app/private/pages/dudas/components/card-reply-duda/card-reply-duda.component.html
@@ -1,10 +1,10 @@
-<div class="ion-padding" >
+<div class="ion-padding" *ngIf="duda">
   <div class="flex-warp" [routerLink]="['/profile']" routerLinkActive="router-link-active" >
     <img class="rounded" alt="user" src="https://ionicframework.com/docs/img/demos/avatar.svg" />
-    <h3>Jorge</h3>
+    <h3>{{duda?.usuario?.nombre|titlecase}}</h3>
   </div>
-  <p>Doctor <span>25/10/2023</span></p>
+  <p>Doctor <span> {{duda?.fecha|date}} </span></p>
   <p class="content-data">
-    Here's a small text description for the card content. Nothing more, nothing less.
+    {{duda?.contenido|titlecase}}
   </p>
 </div>
