--- a/src/app/private/pages/home/home.page.html
+++ b/src/app/private/pages/home/home.page.html
@@ -8,5 +8,7 @@
   <app-cards-items [icon]="'folder-outline'" [title]="'Exámenes'" [href]="'/examenes-medicos'" />
   <app-cards-items [icon]="'medical-outline'" [title]="'Vacunas'" [href]="'/vacunas'" />
   <app-cards-items [icon]="'reader-outline'" [title]="'Citas'" [href]="'/citas-medicas'" />
+  <app-cards-items [icon]="'reader-outline'" [title]="'Medicamentos'" [href]="'/medicamentos'" />
+  <app-cards-items [icon]="'reader-outline'" [title]="'Antecedentes medicos'" [href]="'/antedecentes-medicos'" />
 
 </ion-content>
