--- a/src/app/private/pages/medicamentos/medicamentos.page.scss
+++ b/src/app/private/pages/medicamentos/medicamentos.page.scss
@@ -38,36 +38,14 @@ div {
     left: 25px;
 }
 
-.label-estado {
+.label-dosis {
     font-size: 15px;
-    width: 100px;
-}
-
-.label-estado-1 {
-    position: relative;
-    left: 40px;
-    top: -15px;
-}
-
-.label-estado-2 {
-    position: relative;
-    left: 0px;
-    top: -15px;
-}
-
-.label-estado-3 {
     position: relative;
     left: 130px;
     top: -45px;
 }
 
-.label-estado-4 {
-    position: relative;
-    left: 15px;
-    top: -20px;
-}
-
-.label-cita {
+.label-nombre {
     position: relative;
     left: 130px;
     top: -50px;
