--- a/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.scss
+++ b/src/app/private/pages/medicamentos-detalle/medicamentos-detalle.page.scss
@@ -24,14 +24,14 @@ ion-button{
     left: 100px;
 }
 
-.label-cita{
+.label-nombre{
     position: relative;
     left: 120px;
     top: 50px;
     font-size: 30px;
 }
 
-.label-estado{
+.label-dosis{
     font-size: 15px;
     width: 100px;
     position: relative;
@@ -42,7 +42,7 @@ ion-button{
 .label-lapso{
     position: relative;
     top: 120px;
-    left: 120px;
+    left: 20px;
     font-weight: 900;
     font-size: 20px;
 }
@@ -50,18 +50,18 @@ ion-button{
 .label-duracion{
     position: relative;
     top:  140px;
-    left: 140px;
+    left: 25px;
     font-weight: 900;
     font-size: 20px;
 }
 
 .close{
-    margin-left: 130px;
+    margin-left: 100px;
     margin-top: 200px;
 }
 
 .edit{
-    margin-left: 30px;
+    margin-left: -30px;
     margin-top: 200px;
 }
 
